<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblApp1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/lblApp"
        android:textAlignment="center"
        android:textAppearance="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#F5F5F5"
        android:text="@string/btnStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        />
    <TextView
        android:id="@+id/lblAuthor"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:text="@string/lblAuthor"
        android:textAppearance="@color/black"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>